--- a/ets2panda/BUILD.gn
+++ b/ets2panda/BUILD.gn
@@ -483,11 +483,11 @@ libes2panda_sources = [
   "parser/ETSparserClasses.cpp",
   "parser/ETSparserEnums.cpp",
   "parser/ETSparserExpressions.cpp",
-  "parser/ETSparserJsDocInfo.cpp",
   "parser/ETSparserNamespaces.cpp",
   "parser/ETSparserStatements.cpp",
   "parser/ETSparserTypes.cpp",
   "parser/JSparser.cpp",
+  "parser/JsdocHelper.cpp",
   "parser/TSparser.cpp",
   "parser/ThrowingTypedParser.cpp",
   "parser/TypedParser.cpp",
@@ -776,7 +776,6 @@ HEADERS_TO_BE_PARSED = [
   "ir/ets/etsParameterExpression.h",
   "ir/ts/tsTypeQuery.h",
   "ir/expressions/importExpression.h",
-  "ir/jsDocAllowed.h",
   "varbinder/variable.h",
   "varbinder/scope.h",
   "varbinder/varbinder.h",
@@ -806,7 +805,6 @@ ES2PANDA_API_GENERATED = [
   "$LIBGEN_DIR/gen/headers/varbinder/variableFlags.yaml",
   "$LIBGEN_DIR/gen/headers/ir/typed.yaml",
   "$LIBGEN_DIR/gen/headers/ir/annotationAllowed.yaml",
-  "$LIBGEN_DIR/gen/headers/ir/jsDocAllowed.yaml",
   "$LIBGEN_DIR/gen/headers/es2panda.yaml",
   "$LIBGEN_DIR/gen/headers/ir/statements/labelledStatement.yaml",
   "$LIBGEN_DIR/gen/headers/checker/types/ts/unknownType.yaml",
