[Cherry-pick][ArkTS][StdLib] Array length: int
Description: Change escompat.Array 'length' property type from 'number' to 'int'
Issue: https://gitee.com/openharmony/arkcompiler_runtime_core/issues/ICRDCD
Testing: All required pre-merge tests passed. Results are available in the ggwatcher

Signed-off-by: cheezzario <windy.road123@huawei-partners.com>

--- a/ets2panda/compiler/scripts/signatures.yaml
+++ b/ets2panda/compiler/scripts/signatures.yaml
@@ -767,7 +767,7 @@ signatures:
   - callee: BUILTIN_ARRAY
     method_name: <get>length
     params: []
-    return_type: PRIMITIVE_DOUBLE
+    return_type: PRIMITIVE_INT
     ref: BUILTIN_ARRAY_LENGTH
 
   - callee: BUILTIN_ARRAY
