Fix stack overflow of default type
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICMK58
Description: Fix stack overflow of default type

Signed-off-by: zmw <zhongmingwei2@huawei.com>
Change-Id: I6d4b921ed1593a6fd84a3c997ace3e68cc421d48

--- a/ets2panda/util/diagnostic/semantic.yaml
+++ b/ets2panda/util/diagnostic/semantic.yaml
@@ -1472,6 +1472,10 @@ semantic:
   id: 184
   message: "Type parameter '{}' has circular constraint dependency."
 
+- name: TYPE_PARAM_CIRCULAR_DEFAULT_TYPE
+  id: 398
+  message: "Default type of type parameter has circular dependency."
+
 - name: TYPE_PARAM_USE_BEFORE_DEFINE
   id: 183
   message: "Type Parameter {} should be defined before use."
