arkts-class-same-type-prop-with-super implemented
Description: arkts-class-same-type-prop-with-super rule implemented
Issue: #ICNC16
Signed-off-by: sefayilmazunal <sefa.yilmaz.unal@huawei.com>

--- a/ets2panda/linter/rule-config.json
+++ b/ets2panda/linter/rule-config.json
@@ -92,7 +92,8 @@
     "arkts-interop-js2s-call-js-method",
     "arkts-interop-js2s-instanceof-js-type",
     "arkts-interop-js2s-self-addtion-reduction",
-    "arkts-promise-with-void-type-need-undefined-as-resolve-arg"
+    "arkts-promise-with-void-type-need-undefined-as-resolve-arg",
+    "arkts-class-same-type-prop-with-super"
   ],
   "ArkUI": [
     "arkui-no-!!-bidirectional-data-binding",
