--- a/ets2panda/linter/package.json
+++ b/ets2panda/linter/package.json
@@ -4,7 +4,7 @@
   "main": "dist/tslinter.js",
   "bin": "bin/tslinter.js",
   "files": [
-    "dist/*","rule-config.json"
+    "dist/*","rule-config.json","docs/rules-cn/*"
   ],
   "private": true,
   "license": "Apache-2.0",
