Implement the new mangled name generation
Issue:
https://gitee.com/openharmony/arkcompiler_runtime_core/issues/ICNC7U

Description:
- implement the new mangled name generatin
- cover the feature with gtests
- update specific names to avoid touching the OHOS repos
- update tests related to these names

Testing:
All required pre-merge tests have passed.
The result is available in the GGWatcher.

Related internal issue: #21301

Change-Id: I955ff66f642280994da6ce60a083741b7ea05fd4
Signed-off-by: Otto Eotvos <otto.eotvos@h-lab.eu>

--- a/ets2panda/BUILD.gn
+++ b/ets2panda/BUILD.gn
@@ -510,6 +510,7 @@ libes2panda_sources = [
   "util/es2pandaMacros.cpp",
   "util/helpers.cpp",
   "util/importPathManager.cpp",
+  "util/nameMangler.cpp",
   "util/path.cpp",
   "util/perfMetrics.cpp",
   "util/plugin.cpp",
