Add Awaited utility type
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICLJFU

Change-Id: I2525655528401267441238a1ff54d4f5b5f848b7
Signed-off-by: Klimentieva <klimentieva.maria@h-partners.com>

--- a/ets2panda/BUILD.gn
+++ b/ets2panda/BUILD.gn
@@ -127,6 +127,7 @@ libes2panda_sources = [
   "checker/types/ets/etsObjectType.cpp",
   "checker/types/ets/etsPartialTypeParameter.cpp",
   "checker/types/ets/etsReadonlyType.cpp",
+  "checker/types/ets/etsAwaitedType.cpp",
   "checker/types/ets/etsResizableArrayType.cpp",
   "checker/types/ets/etsStringType.cpp",
   "checker/types/ets/etsTupleType.cpp",
