--- a/ets2panda/lsp/BUILD.gn
+++ b/ets2panda/lsp/BUILD.gn
@@ -70,6 +70,7 @@ ohos_source_set("libes2panda_lsp_static") {
     "src/get_class_property_info.cpp",
     "src/get_definition_and_bound_span.cpp",
     "src/get_name_or_dotted_name_span.cpp",
+    "src/get_node.cpp",
     "src/get_safe_delete_info.cpp",
     "src/inlay_hints.cpp",
     "src/internal_api.cpp",
