--- a/ets2panda/bindings/BUILD.gn
+++ b/ets2panda/bindings/BUILD.gn
@@ -64,7 +64,8 @@ shared_library("ts_bindings") {
 
   if (ark_standalone_build) {
     deps += [
-      "$ark_root/bytecode_optimizer:libarktsbytecodeopt_package",
+      "$ark_root/bytecode_optimizer:libarktsbytecodeopt_frontend_static",
+      "$ark_root/abc2program:arkts_abc2program_static",
       "$ark_third_party_root/bounds_checking_function:libsec_shared",
     ]
     include_dirs += [ "//third_party/node/src" ]
