--- a/ets2panda/bindings/package.json
+++ b/ets2panda/bindings/package.json
@@ -7,7 +7,8 @@
     "@types/node": "^18.0.0",
     "prettier": "latest",
     "rimraf": "^6.0.1",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "jest-diff": "latest"
   },
   "main": "dist/index.js",
   "scripts": {
@@ -15,6 +16,7 @@
     "test:compile": "tsc --build --verbose test/tsconfig.json",
     "test:build": "npm run test:clean && npm run test:compile",
     "test": "npm run test:build && node dist-test/test/run_tests.js ./test",
+    "test:update": "npm run test:build && node dist-test/test/run_tests.js ./test --update",
     "compile": "tsc --build --verbose tsconfig.json",
     "clean": "rimraf dist tsconfig.tsbuildinfo package-lock.json",
     "run": "npm run clean && npm run compile",
