opt field in interface now forced to impl
Description: arkts-no-class-omit-interface-optional-prop rule added to force classes implement all fields from an interface
Issue: #ICO3VQ
Signed-off-by: sefayilmazunal <sefa.yilmaz.unal@huawei.com>

--- a/ets2panda/linter/rule-config.json
+++ b/ets2panda/linter/rule-config.json
@@ -53,6 +53,7 @@
     "arkts-limited-stdlib-no-setCloneList",
     "arkts-limited-stdlib-no-setTransferList",
     "arkts-builtin-object-getOwnPropertyNames",
+    "arkts-no-class-omit-interface-optional-prop",
     "arkts-no-sparse-array",
     "arkts-no-enum-prop-as-type",
     "arkts-no-ts-like-smart-type",
