Adapt to node 14
Issue: https://gitee.com/openharmony/interface_sdk-js/issues/ICNTYC

Signed-off-by: dongchao <dongchao46@huawei.com>
Change-Id: I1356d79bc3147bc76f9944015b96bb3244e7a3b9

--- a/ets2panda/driver/build_system/package.json
+++ b/ets2panda/driver/build_system/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Compile ArkTS 2.0 source code into bytecode, encompassing UI transformations.",
   "private": true,
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "main": "dist/index.js",
   "scripts": {
     "clean": "rimraf dist",
