--- a/ets2panda/test/unit/lsp/CMakeLists.txt
+++ b/ets2panda/test/unit/lsp/CMakeLists.txt
@@ -267,6 +267,10 @@ ets2panda_add_gtest(lsp_api_test_fix_convert_const_to_let CPP_SOURCES
     fix_convert_const_to_let_test.cpp
 )
 
+ets2panda_add_gtest(lsp_api_test_forgotten_this_property_access CPP_SOURCES
+    forgotten_this_property_access_test.cpp
+)
+
  ets2panda_add_gtest(lsp_api_test_remove_accidental_call_parentheses CPP_SOURCES
     remove_accidental_call_parentheses_test.cpp
  )
