Fix constructor func type error
Reason:
Currently misleading error message on constructor function types

Description:
Extending parser with basic parsing of constructor function types.
Adding new diagnostic error message

Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICO2QK

Signed-off-by: Torok Gergo <gergo.torok@h-lab.eu>

--- a/ets2panda/util/diagnostic/syntax.yaml
+++ b/ets2panda/util/diagnostic/syntax.yaml
@@ -145,6 +145,10 @@ syntax:
   id: 127
   message: "Conflicting modifiers '!' and '?' on field."
 
+- name: CONSTRUCTOR_FUNC_TYPE_NOT_SUPPORTED
+  id: 93489
+  message: "Constructor function types are not supported."
+
 - name: DECALRE_IN_AMBIENT_CONTEXT
   id: 104
   message: "A 'declare' modifier cannot be used in an already ambient context."
