Add for SdkCommonDeprecatedApi
Issue:https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICONQH

Test scenarios: update Require

Signed-off-by: ZhongNing <zhongning5@huawei.com>

--- a/ets2panda/linter/rule-config.json
+++ b/ets2panda/linter/rule-config.json
@@ -138,7 +138,10 @@
     "arkui-no-deprecated-api",
     "arkui-buildernode-generic-no-tuple",
     "arkui-buildernode-update-no-literal",
-    "arkui-buildernode-no-nestingbuildersupported"
+    "arkui-buildernode-no-nestingbuildersupported",
+    "arkui-sdk-common-deprecated-api",
+    "arkui-sdk-common-whitelist-api",
+    "arkui-sdk-common-behaviorchange-api"
   ],
   "builtin": [
     "arkts-builtin-thisArgs",
