[LSP]: Codefix: add missing new operator
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICO3J2
Signed-off-by: dogasahin_7f63 <doga.sahin3@huawei.com>

--- a/ets2panda/lsp/CMakeLists.txt
+++ b/ets2panda/lsp/CMakeLists.txt
@@ -110,6 +110,7 @@ set(ES2PANDA_LSP_SRC
   ./src/types.cpp
   ./src/navigate_to.cpp
   ./src/code_fix_provider.cpp
+  ./src/register_code_fix/add_missing_new_operator.cpp
   ./src/register_code_fix/fix_class_doesnt_implement_inherited_abstract_member.cpp
   ./src/register_code_fix/fix_expected_comma.cpp
   ./src/register_code_fix/fix_return_type_in_async_function.cpp
