--- a/ets2panda/test/unit/lsp/CMakeLists.txt
+++ b/ets2panda/test/unit/lsp/CMakeLists.txt
@@ -279,3 +279,7 @@ ets2panda_add_gtest(lsp_api_test_forgotten_this_property_access CPP_SOURCES
  ets2panda_add_gtest(lsp_api_test_remove_accidental_call_parentheses CPP_SOURCES
     remove_accidental_call_parentheses_test.cpp
  )
+
+ets2panda_add_gtest(lsp_api_add_missing_new_operator CPP_SOURCES
+    add_missing_new_operator_test.cpp
+)
