add new rule arkts-no-import-json-file
Issue: https://gitee.com/openharmony/arkcompiler_ets_frontend/issues/ICN9D9
Signed-off-by: muratcimen_9be2 <murat.cimen@huawei.com>

--- a/ets2panda/linter/rule-config.json
+++ b/ets2panda/linter/rule-config.json
@@ -41,6 +41,7 @@
     "arkts-no-tuples-arrays",
     "arkts-class-static-initialization",
     "arkts-invalid-identifier",
+    "arkts-no-import-json-file",
     "arkts-no-extends-expression",
     "arkts-no-ts-like-function-call",
     "arkts-method-inherit-rule",
